Fixed iOS clipping

--- a/_sass/hero.sass
+++ b/_sass/hero.sass
@@ -2,7 +2,8 @@
 	display: flex
 	width: 100vw
 	height: 100vh
-	position: relative
+
+	// position: relative
 	background: $sky
 
 	.welcome-wrap
@@ -74,6 +75,7 @@
 
 		&.front
 			position: absolute
+			bottom: -41.67vw
 
 		&.layer-3, &.layer-4
 			pointer-events: none
